Ensure lines break in view note page

--- a/fe/src/pages/ViewNotePage/ViewNotePage.scss
+++ b/fe/src/pages/ViewNotePage/ViewNotePage.scss
@@ -4,4 +4,13 @@
   bottom: 0px;
   width: 100%;
   overflow-y: scroll;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
 }
